Add first screenshots

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -17,6 +17,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d371f3c-c257-486d-b7b3-3569474bbc85",
+   "metadata": {},
+   "source": [
+    "The ui-profiler can be started from Launcher's \"Other\" section:\n",
+    "\n",
+    "![Launcher](images/launcher.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c0efdc2-eeee-43c6-9f7a-4c3723b8c5be",
+   "metadata": {},
+   "source": [
+    "### Interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c5e718a-f9b7-4310-9d38-350cae9cc9f8",
+   "metadata": {},
+   "source": [
+    "You can select multiple benchmarks (left) and multiple scenarios (right) at once. Configuration options for benchmarks and scenarios will show up when selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce01e16a-f525-45cc-9500-0a93c8668ecf",
+   "metadata": {},
+   "source": [
+    "![Profiler](images/ui-profiler.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bbf6eca8-8a25-41b8-80bd-34f52d02151a",
@@ -46,7 +80,13 @@
    "outputs": [],
    "source": [
     "def format_property(prop: dict, is_required: bool):\n",
-    "    out = prop['title'] + ' (' + prop['type'] + ')'\n",
+    "    # TODO: default\n",
+    "    detail = prop['type']\n",
+    "    if 'enum' in prop:\n",
+    "        detail = ' | '.join(prop['enum'])\n",
+    "    if 'default' in prop:\n",
+    "        detail += ', default=' + repr(prop['default'])\n",
+    "    out = prop['title'] + ' (' + detail + ')'\n",
     "    if 'description' in prop:\n",
     "        out += ': ' + prop['description']\n",
     "    return out\n",
@@ -108,7 +148,7 @@
     "\n",
     "For benchmarking of individual actions, box plot visualisation is provided. You can hover over the circles, box lines, and whiskers to get details about the individual datapoints/statistics.\n",
     "\n",
-    "IMAGE\n",
+    "![Boxplot](images/boxplot.png)\n",
     "\n",
     "The box represents 1st, 2nd (median) and 3rd quartile and whiskers correspond to minimum/maximum or 1.5 IQR away from the 1st/3rd quartile, whichever is smaller."
    ]
@@ -165,10 +205,10 @@
    "metadata": {},
    "source": [
     "Four benchmarks are provided for CSS styles:\n",
-    "- Style Rules: provides information on CSS rule performance by disabling rules one-by-one, but takes a long time to iterate over every single rule available\n",
-    "- Style Sheets: disables entire CSS style sheets at a time; it is faster than disabling rules one-by-one, and more efficient when offending styles come from a single extension\n",
-    "- Style Rule Groups: allows to triangulate the offending rules or group of rules by disabling them block-by-block and then calculating an average contribution of each rule based on the runtime of each block\n",
-    "- Style Rule Usage: observes DOM modifications to calculate the frequency of usage for rules deemed relevant to the investigated scenario"
+    "- [Style Rules](style_rules): provides information on CSS rule performance by disabling rules one-by-one, but takes a long time to iterate over every single rule available\n",
+    "- [Style Sheets](style_sheets): disables entire CSS style sheets at a time; it is faster than disabling rules one-by-one, and more efficient when offending styles come from a single extension\n",
+    "- [Style Rule Groups](style_rule_groups): allows to triangulate the offending rules or group of rules by disabling them block-by-block and then calculating an average contribution of each rule based on the runtime of each block\n",
+    "- [Style Rule Usage](style_rule_usage): observes DOM modifications to calculate the frequency of usage for rules deemed relevant to the investigated scenario"
    ]
   },
   {
@@ -184,7 +224,7 @@
    "id": "bc5d01d8-c6d8-49ad-a870-f41025ee8336",
    "metadata": {},
    "source": [
-    "For avoidance of doubt, *rules* are defined as groups of *properties*:"
+    "*Rules* are defined as groups of *properties*:"
    ]
   },
   {
@@ -215,9 +255,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "885cb344-5eed-446d-90b0-a860dd4741b1",
+   "metadata": {},
+   "source": [
+    "### Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a730e0-e4b8-472f-a8da-fa4a1a56b541",
+   "metadata": {},
+   "source": [
+    "Rules with pseudo-selectors and pseudo-classes in selector (e.g. `:hover`) cannot be invoked programatically, and therefore this ui-profiler cannot rule out performence bottlenecks resulting from such rules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4906607f-7641-408c-8f0c-33c6671d4f6f",
    "metadata": {},
    "source": [
+    "(style_rules)=\n",
     "### Style Rules"
    ]
   },
@@ -248,6 +305,7 @@
    "id": "17c4bf40-129b-4847-b94d-3ccf1a17783c",
    "metadata": {},
    "source": [
+    "(style_sheets)=\n",
     "### Style Sheets"
    ]
   },
@@ -286,7 +344,7 @@
    "id": "d2f9f23c-d05f-4844-a966-dfcac5b49a55",
    "metadata": {},
    "source": [
-    "When a stylesheet is highlighted in this analysis, but no individual rule was higlighted in [Style Rules] analysis, it may indicate a presence of interaction or synergy between rules."
+    "When a stylesheet is highlighted in this analysis, but no individual rule was higlighted in [Style Rules](style_rules) analysis, it may indicate a presence of interaction or synergy between rules."
    ]
   },
   {
@@ -294,7 +352,8 @@
    "id": "f448ab8d-d94c-4038-b604-af89f09baa0b",
    "metadata": {},
    "source": [
-    "## Style Rule Groups"
+    "(style_rule_groups)=\n",
+    "### Style Rule Groups"
    ]
   },
   {
@@ -324,6 +383,7 @@
    "id": "0902551c-db3f-4b4a-8b6c-d85e895c1d20",
    "metadata": {},
    "source": [
+    "(style_rule_usage)=\n",
     "### Style Rule Usage"
    ]
   },
