Finalise first version of user guide

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -51,6 +51,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "461a9943-8682-494b-a3bc-c679c0b2d11d",
+   "metadata": {},
+   "source": [
+    "After you selected the desired benchmarks and scenarios press \"Start\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bbf6eca8-8a25-41b8-80bd-34f52d02151a",
@@ -80,7 +88,6 @@
    "outputs": [],
    "source": [
     "def format_property(prop: dict, is_required: bool):\n",
-    "    # TODO: default\n",
     "    detail = prop['type']\n",
     "    if 'enum' in prop:\n",
     "        detail = ' | '.join(prop['enum'])\n",
@@ -108,6 +115,97 @@
     "    ]\n",
     "    formatted = '\\n'.join(['<li>' + entry for entry in formatted])\n",
     "    display(HTML(f'<ul>{formatted}</ul>'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0b3c8d2-04d0-47c1-88ad-96ca15a402fb",
+   "metadata": {},
+   "source": [
+    "For best results do not click, change focus or move your mouse after pressing <button>Start</button>\n",
+    " - most scenarios can be run when the browser window is blurred, but switching to CPU- or memory-heavy workload in another process may introduce additional variability\n",
+    " - most scenarios will **pause running** if you switch the tab (because `window.requestAnimationFrame` is used to synchronise execution with layout/paint events and it gets paused in background tabs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91cd38e2-f97f-45ce-83d0-ffeb86d1f2f9",
+   "metadata": {},
+   "source": [
+    "### Results\n",
+    "\n",
+    "The results will show in the area below the benchmark launcher:\n",
+    "\n",
+    "![Result overview](images/ui-profiler-with-boxplot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd0e5aa-0717-4ee1-8570-6e7bc869dbab",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    ".needs-box {\n",
+    "    padding: 2px 5px;\n",
+    "    border: 1px solid darkgrey;\n",
+    "}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "688f135a-3955-4182-9f59-0daff64b2015",
+   "metadata": {},
+   "source": [
+    "The summary of the benchmark run (left) and runtime environment (right) is shown at the top. You can hover over individual items to see more details (e.g. over \"Reference\" to see the list of times, over \"Browser\" to get detailed user agent information).\n",
+    "\n",
+    "```{image} images/result-summary.png\n",
+    ":alt: Result summary\n",
+    ":class: needs-box\n",
+    ":align: center\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "944aee0f-4e5f-4b80-8d42-260beb90c746",
+   "metadata": {},
+   "source": [
+    "You can click on `> Options` to view the configuration with which the benchmark was run.\n",
+    "\n",
+    "```{image} images/result-options.png\n",
+    ":alt: Result options\n",
+    ":class: needs-box\n",
+    ":align: center\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4adac64d-8a38-43ed-8507-5148df93712b",
+   "metadata": {},
+   "source": [
+    "Tables with results can be sorted by clicking on the headers (click twice to reverse order), and columns can be resized by dragging edges of the headers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ae19cb-3067-46ab-9c5a-0d5d92e5c9cf",
+   "metadata": {},
+   "source": [
+    "### Results history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61f8e4f3-574b-4d4a-8209-831363ec8a26",
+   "metadata": {},
+   "source": [
+    "Results are stored in `.profile.json` files in `ui-profiler-results` directory (automatically crated if needed) directly below the root directory of JupyterLab.\n",
+    "\n",
+    "If you want to remove a result from history you can remove the corresponding file directly; similarly if you want to preview a result generated on a different machine/instance you can copy it into the `ui-profiler-results` directory.\n",
+    "\n",
+    "The newest results are placed at the top of the list."
    ]
   },
   {
@@ -146,7 +244,7 @@
    "source": [
     "In general performance timings are easily skewed towards higher values by external tasks such as garbage collection, activity of browser extensions or CPU utilisation by external processes. We recommend sorting by first quartile as default, with empirically second-best option being inter-quartile mean - but this varies by benchmark and scenario.\n",
     "\n",
-    "For benchmarking of individual actions, box plot visualisation is provided. You can hover over the circles, box lines, and whiskers to get details about the individual datapoints/statistics.\n",
+    "For benchmarking of individual actions, box plot visualisation is provided. Hover over the circles, box lines, and whiskers to get details about the individual datapoints/statistics.\n",
     "\n",
     "![Boxplot](images/boxplot.png)\n",
     "\n",
@@ -302,6 +400,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30cba4a8-30c4-48c7-b355-b9bc88a53353",
+   "metadata": {},
+   "source": [
+    "### Interpretation\n",
+    "\n",
+    "Negative Δ highlights rules which may be deteriorating performance.\n",
+    "\n",
+    "Due to multiple testing expect an enrichment of false positives which decreases as you increase the number of repeats. Empirically order of magnitude of 100 repeats is needed to minimise the false positives.\n",
+    "\n",
+    "Example result scenario for menu opening scenario with 10 repeats:\n",
+    "\n",
+    "![Style rules lumino table](images/rules.png)\n",
+    "\n",
+    "This example demonstrates the issue of false positives well: only `.lm-MenuBar-itemMnemonic` and `.lm-Menu-itemShortcut` are relevant.\n",
+    "\n",
+    "Columns:\n",
+    "- `bgMatches`: how many elements matched the rule at standby (as compared to during scenario execution); mostly useful to find too broad rules, or potentially unused rules with expensive selectors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17c4bf40-129b-4847-b94d-3ccf1a17783c",
    "metadata": {},
    "source": [
@@ -344,7 +463,9 @@
    "id": "d2f9f23c-d05f-4844-a966-dfcac5b49a55",
    "metadata": {},
    "source": [
-    "When a stylesheet is highlighted in this analysis, but no individual rule was higlighted in [Style Rules](style_rules) analysis, it may indicate a presence of interaction or synergy between rules."
+    "![Style sheets lumino table](images/style-sheets.png)\n",
+    "\n",
+    "When a stylesheet is highlighted in this analysis, but no individual rule was highlighted in [Style Rules](style_rules) analysis, it may indicate a presence of interaction or synergy between rules."
    ]
   },
   {
@@ -380,6 +501,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "067b02ee-f520-46f9-8556-8f200b79687a",
+   "metadata": {},
+   "source": [
+    "#### Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72b46ca9-8591-49b8-b6ec-64bc1e4989e2",
+   "metadata": {},
+   "source": [
+    "Per-block results may highlight groups of styles degrading performance:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7760ca2a-7acb-4ef0-aad1-19d0271f6ff4",
+   "metadata": {},
+   "source": [
+    "![Style rule groups lumino table](images/style-rule-groups-blocks.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92328973-9e33-4cd3-95a2-02dde320e053",
+   "metadata": {},
+   "source": [
+    "Per-block results are easier to interpret with blocks of smaller size (higher granularity)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc843102-565f-4149-98f2-2cbddf544f93",
+   "metadata": {},
+   "source": [
+    "Per-rule averages may be useful to narrow down offending styles:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a34b762-7e73-46ab-b073-222dd7ba6c30",
+   "metadata": {},
+   "source": [
+    "![Style rule groups lumino table](images/style-rule-groups-rules.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d7e1ea-124b-4238-80d0-5f6c5598b6f4",
+   "metadata": {},
+   "source": [
+    "In the above example exclusion of `.jp-JSONEditor*` or `.lm-Menu*` styles and appears to improve performance. Given, the scenario (opening menu) the former is just coincidence (was selected in the same block more often) and latter indicates relevant styles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0902551c-db3f-4b4a-8b6c-d85e895c1d20",
    "metadata": {},
    "source": [
@@ -407,6 +584,34 @@
    "outputs": [],
    "source": [
     "show_settings('benchmark-rule-usage')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69fabadb-bd24-4075-aaf1-92cd9f6e3cc1",
+   "metadata": {},
+   "source": [
+    "#### Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df2ab06e-474f-4f35-93ef-edbbc28e173b",
+   "metadata": {},
+   "source": [
+    "- `elementsSeen`: how many elements were seen on the entire page when executing the scenario.\n",
+    "- `elementsTouched`: how many elements were modified or in the subtree of a modified element when executing the scenario.\n",
+    "- `touchCount`: upper bound on how many times the rule matched an element (will be high for rules matching many elements, and for rules matching a single element that is repeatedly modified in the chosen scenario).\n",
+    "\n",
+    "Low number of `elementsSeen` suggest potentially unused rule. Negative Δ highlights rules which may be deteriorating performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2649527-80e8-494a-a445-2850067d7bdd",
+   "metadata": {},
+   "source": [
+    "![Rule usage](images/rule-usage.png)"
    ]
   },
   {
@@ -450,10 +655,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc2c20e2-4da1-4caa-b076-05b1a1d5d4d1",
+   "metadata": {},
+   "source": [
+    "Hints:\n",
+    "- for `micro` mode low number of repeats is often sufficient (e.g. 3), whereas `macro` mode is intended to be used with high number of repeats (e.g. 50).\n",
+    "- if `micro` mode does not catch the frames you want try increasing the number of repeats and scroll through the list of traces to find a repeat with satisfactory number of frames\n",
+    "- `macro` mode only averages the numbers in the table - the timeline is showing all repeats in order and this may be prohibitive to render if number of repeats is set to a very high number (e.g. 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29b1f0ba-66d0-4a7d-85f3-bef22eac4b36",
    "metadata": {},
    "source": [
     "### Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edbebc85-5025-430a-94b8-d23174df56f1",
+   "metadata": {},
+   "source": [
+    "> Note: when running on production version of JupyterLab names of functions and classes may be minimized. You can rebuild JupyterLab or use a development version to ease interpretation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "936f6e5f-e68b-48b7-9cc8-19fac991750c",
+   "metadata": {},
+   "source": [
+    "The micro mode provides the timeline for each individual run (repeat) of the scenario with stacks of frames corresponding to the execution stack:\n",
+    "\n",
+    "![JS profiling result in micro mode](images/self-profiling-micro-details.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d54f9d00-6c39-47ff-b266-dff9870d0356",
+   "metadata": {},
+   "source": [
+    "In macro mode all runs are shown together chained in the timeline, but results table averages timings per function across repeats.\n",
+    "\n",
+    "![JS profiling trace in macro mode](images/self-profiling-macro-trace.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cda7f19-207c-4fbf-a7f8-6eae6d3b177e",
+   "metadata": {},
+   "source": [
+    "Legend:\n",
+    "- blue boxes denote native JavaScript code,\n",
+    "- green boxes indicate functions from JupyterLab, JupyterLab extensions or browser extensions,\n",
+    "- vertical dotted lines indicate boundaries for specific samples (local resolution of sampling)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "093ed1ed-c345-4be0-bfaf-c1cd409cad04",
+   "metadata": {},
+   "source": [
+    "Interactivity:\n",
+    "- hover over boxes to see execution time,\n",
+    "- you can zoom and pan to navigate larger traces,\n",
+    "- in the `micro` mode use the traces selector to choose the repeat which recorded all relevant frames (in `macro` mode there is only one trace),\n",
+    "- if the timeline fills the full height of the details section, you can resize it by grabbing bottom-right corner."
    ]
   },
   {
@@ -481,46 +748,6 @@
     "if it is active and you have just installed the extension, restart `jupyterlab` to ensure that it is loaded.\n",
     "\n",
     "If you use a replacement server (e.g. jupyverse) you will need to add the required header manually or switch to the default jupyter-server for the time of profiling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c10ff475-db9d-4512-8654-7e312c1b125b",
-   "metadata": {},
-   "source": [
-    "# Scenarios"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e68348b-022b-4892-918a-5ab1d94e7843",
-   "metadata": {},
-   "source": [
-    "TODO: should default scenarios be documented in another document?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "734e2b2f-fbc4-4963-a2f4-c8626a93a84a",
-   "metadata": {},
-   "source": [
-    "# Advanced usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b2d2984-4d3e-4d55-98d2-b411db39a633",
-   "metadata": {},
-   "source": [
-    "TODO: possibly in another document?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de8ae430-c8e8-4546-a6d8-e40424697461",
-   "metadata": {},
-   "source": [
-    "## Loading from Python"
    ]
   }
  ],
