Add links to documentation, README to docs, polish images

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -2,60 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "453c51fb-7e3c-47ed-8934-51b7627720cf",
+   "id": "2bd0e5aa-0717-4ee1-8570-6e7bc869dbab",
    "metadata": {},
    "source": [
-    "# User Guide\n",
-    "\n",
-    "## Quick start\n",
-    "\n",
-    "You can install this extension from PyPI using:\n",
-    "\n",
-    "```bash\n",
-    "pip install -U jupyterlab-ui-profiler\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d371f3c-c257-486d-b7b3-3569474bbc85",
-   "metadata": {},
-   "source": [
-    "The ui-profiler can be started from Launcher's \"Other\" section:\n",
-    "\n",
-    "![Launcher](images/launcher.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c0efdc2-eeee-43c6-9f7a-4c3723b8c5be",
-   "metadata": {},
-   "source": [
-    "### Interface"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c5e718a-f9b7-4310-9d38-350cae9cc9f8",
-   "metadata": {},
-   "source": [
-    "You can select multiple benchmarks (left) and multiple scenarios (right) at once. Configuration options for benchmarks and scenarios will show up when selected."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce01e16a-f525-45cc-9500-0a93c8668ecf",
-   "metadata": {},
-   "source": [
-    "![Profiler](images/ui-profiler.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "461a9943-8682-494b-a3bc-c679c0b2d11d",
-   "metadata": {},
-   "source": [
-    "After you selected the desired benchmarks and scenarios press \"Start\"."
+    "<style>\n",
+    ".no-box, .needs-box {\n",
+    "    display: block;\n",
+    "    margin: 0 auto;\n",
+    "    margin-bottom: 10px;\n",
+    "    border-radius: 0;\n",
+    "}\n",
+    ".needs-box {\n",
+    "    border: 3px solid #bdbdbd;\n",
+    "}\n",
+    ".add-padding {\n",
+    "    padding: 2px 5px;\n",
+    "}\n",
+    ".jp-button {\n",
+    "    background: #1976d2;\n",
+    "    border: 0;\n",
+    "    color: white;\n",
+    "    font-size: 13px\n",
+    "    box-sizing: border-box;\n",
+    "    text-align: center;\n",
+    "    line-height: 32px;\n",
+    "    height: 32px;\n",
+    "    padding: 0px 12px;\n",
+    "    letter-spacing: 0.8px;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -81,6 +56,9 @@
    "execution_count": null,
    "id": "98d9ed0d-efe7-4e58-9eff-1c252dbaf138",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-cell"
     ]
@@ -119,10 +97,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "453c51fb-7e3c-47ed-8934-51b7627720cf",
+   "metadata": {},
+   "source": [
+    "# User Guide\n",
+    "\n",
+    "## Quick start\n",
+    "\n",
+    "You can install this extension from PyPI using:\n",
+    "\n",
+    "```bash\n",
+    "pip install -U jupyterlab-ui-profiler\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d371f3c-c257-486d-b7b3-3569474bbc85",
+   "metadata": {},
+   "source": [
+    "The ui-profiler can be started from Launcher's \"Other\" section:\n",
+    "\n",
+    "<img src=\"images/launcher.png\" alt=\"UI Profiler card in launcher\" class=\"no-box\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c0efdc2-eeee-43c6-9f7a-4c3723b8c5be",
+   "metadata": {},
+   "source": [
+    "### Interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c5e718a-f9b7-4310-9d38-350cae9cc9f8",
+   "metadata": {},
+   "source": [
+    "You can select multiple benchmarks (left) and multiple scenarios (right) at once. Configuration options for benchmarks and scenarios will show up when selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce01e16a-f525-45cc-9500-0a93c8668ecf",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/ui-profiler.png\" alt=\"UI Profiler widget\" class=\"no-box\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "461a9943-8682-494b-a3bc-c679c0b2d11d",
+   "metadata": {},
+   "source": [
+    "After you selected the desired benchmarks and scenarios press <button class=\"jp-button\">Start</button>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0b3c8d2-04d0-47c1-88ad-96ca15a402fb",
    "metadata": {},
    "source": [
-    "For best results do not click, change focus or move your mouse after pressing <button>Start</button>\n",
+    "For best results do not click, change focus or move your mouse after pressing <button class=\"jp-button\">Start</button>\n",
     " - most scenarios can be run when the browser window is blurred, but switching to CPU- or memory-heavy workload in another process may introduce additional variability\n",
     " - most scenarios will **pause running** if you switch the tab (because `window.requestAnimationFrame` is used to synchronise execution with layout/paint events and it gets paused in background tabs)"
    ]
@@ -136,20 +172,7 @@
     "\n",
     "The results will show in the area below the benchmark launcher:\n",
     "\n",
-    "![Result overview](images/ui-profiler-with-boxplot.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2bd0e5aa-0717-4ee1-8570-6e7bc869dbab",
-   "metadata": {},
-   "source": [
-    "<style>\n",
-    ".needs-box {\n",
-    "    padding: 2px 5px;\n",
-    "    border: 1px solid darkgrey;\n",
-    "}\n",
-    "</style>"
+    "<img src=\"images/ui-profiler-with-boxplot.png\" alt=\"Result overview\" class=\"needs-box\">"
    ]
   },
   {
@@ -159,11 +182,7 @@
    "source": [
     "The summary of the benchmark run (left) and runtime environment (right) is shown at the top. You can hover over individual items to see more details (e.g. over \"Reference\" to see the list of times, over \"Browser\" to get detailed user agent information).\n",
     "\n",
-    "```{image} images/result-summary.png\n",
-    ":alt: Result summary\n",
-    ":class: needs-box\n",
-    ":align: center\n",
-    "```"
+    "<img src=\"images/result-summary.png\" alt=\"Result summary\" class=\"needs-box add-padding\">"
    ]
   },
   {
@@ -173,11 +192,7 @@
    "source": [
     "You can click on `> Options` to view the configuration with which the benchmark was run.\n",
     "\n",
-    "```{image} images/result-options.png\n",
-    ":alt: Result options\n",
-    ":class: needs-box\n",
-    ":align: center\n",
-    "```"
+    "<img src=\"images/result-options.png\" alt=\"Result options\" class=\"needs-box add-padding\">"
    ]
   },
   {
@@ -201,7 +216,7 @@
    "id": "61f8e4f3-574b-4d4a-8209-831363ec8a26",
    "metadata": {},
    "source": [
-    "Results are stored in `.profile.json` files in `ui-profiler-results` directory (automatically crated if needed) directly below the root directory of JupyterLab.\n",
+    "Results are stored in `.profile.json` files in `ui-profiler-results` directory (automatically created if needed) directly below the root directory of JupyterLab.\n",
     "\n",
     "If you want to remove a result from history you can remove the corresponding file directly; similarly if you want to preview a result generated on a different machine/instance you can copy it into the `ui-profiler-results` directory.\n",
     "\n",
@@ -231,6 +246,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec07e4de-4401-4dd6-ae5a-47af8c018aa8",
+   "metadata": {},
+   "source": [
+    "### Available settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70a4d8dc-7aac-417c-b0c1-e4f100a10210",
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "show_settings('benchmark-execution')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80aad3f9-6688-402d-bf7a-e7331ea2ff25",
    "metadata": {},
    "source": [
@@ -246,31 +283,9 @@
     "\n",
     "For benchmarking of individual actions, box plot visualisation is provided. Hover over the circles, box lines, and whiskers to get details about the individual datapoints/statistics.\n",
     "\n",
-    "![Boxplot](images/boxplot.png)\n",
+    "<img src=\"images/boxplot.png\" alt=\"Boxplot\" class=\"needs-box add-padding\">\n",
     "\n",
     "The box represents 1st, 2nd (median) and 3rd quartile and whiskers correspond to minimum/maximum or 1.5 IQR away from the 1st/3rd quartile, whichever is smaller."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec07e4de-4401-4dd6-ae5a-47af8c018aa8",
-   "metadata": {},
-   "source": [
-    "#### Available settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70a4d8dc-7aac-417c-b0c1-e4f100a10210",
-   "metadata": {
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "show_settings('benchmark-execution')"
    ]
   },
   {
