Document remaining columns

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -30,6 +30,15 @@
     "    padding: 0px 12px;\n",
     "    letter-spacing: 0.8px;\n",
     "}\n",
+    "div.container.cell {\n",
+    "    margin-bottom: 0!important;\n",
+    "}\n",
+    "h3, h4 {\n",
+    "    margin-top: 1.75rem;\n",
+    "}\n",
+    ".cell_output ul {\n",
+    "    margin-bottom: 0\n",
+    "}\n",
     "</style>"
    ]
   },
@@ -326,6 +335,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01fb02f9-84ae-4f04-bd43-f0da4b45ce53",
+   "metadata": {},
+   "source": [
+    "The results are presented in an interactive table which includes a set of columns shared between all CSS benchmarks (below) as well as benchmark-specific columns.\n",
+    "\n",
+    "The timings and statistics in table refer to execution time after disabling the rule/group of rules:\n",
+    "- `times`: measured execution times for each of the repeats\n",
+    "- `min`: fastest execution time\n",
+    "- `mean`: average execution time\n",
+    "- `IQM`: inter-quartile mean execution time\n",
+    "- `ΔIQM`: change in IQM\n",
+    "- `Q1`: first quartile of execution time\n",
+    "- `ΔQ1`: change in first quartile\n",
+    "\n",
+    "Other common columns are:\n",
+    "- `errors`: list of errors encountered during scenario execution (only present if any errors were encountered)\n",
+    "- `stylesheetIndex`: index of the style sheet among all stylesheets on the page\n",
+    "- `ruleIndex`: index of the rule within the source stylesheet\n",
+    "- `source`: the path to the source stylesheet if available. 📦 is an abbreviation for `node_modules` (locally developed/source extensions will not have a 📦 prefix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cce23034-0b20-45fa-87ef-3abe00f4cb56",
    "metadata": {},
    "source": [
@@ -418,7 +450,7 @@
    "id": "30cba4a8-30c4-48c7-b355-b9bc88a53353",
    "metadata": {},
    "source": [
-    "### Interpretation\n",
+    "#### Interpretation\n",
     "\n",
     "Negative Δ highlights rules which may be deteriorating performance.\n",
     "\n",
@@ -430,7 +462,7 @@
     "\n",
     "This example demonstrates the issue of false positives well: only `.lm-MenuBar-itemMnemonic` and `.lm-Menu-itemShortcut` are relevant.\n",
     "\n",
-    "Columns:\n",
+    "Benchmark-specific columns:\n",
     "- `bgMatches`: how many elements matched the rule at standby (as compared to during scenario execution); mostly useful to find too broad rules, or potentially unused rules with expensive selectors."
    ]
   },
@@ -572,6 +604,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d6be35e-56fc-4cee-bae5-8e276d2fab03",
+   "metadata": {},
+   "source": [
+    "Benchmark-specific columns:\n",
+    "- `divisions`: into how many blocks was the list of styles divided in this run?\n",
+    "- `block`: which block of a particular run does this result refer to?\n",
+    "- `randomization`: which repeat with re-shuffled list of styles does this result refer to? 0th randomization is using the original order which often has similar styles next to each other (if original stylesheets are written in sensible order)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0902551c-db3f-4b4a-8b6c-d85e895c1d20",
    "metadata": {},
    "source": [
@@ -614,6 +657,7 @@
    "id": "df2ab06e-474f-4f35-93ef-edbbc28e173b",
    "metadata": {},
    "source": [
+    "Benchmark-specific columns:\n",
     "- `elementsSeen`: how many elements were seen on the entire page when executing the scenario.\n",
     "- `elementsTouched`: how many elements were modified or in the subtree of a modified element when executing the scenario.\n",
     "- `touchCount`: upper bound on how many times the rule matched an element (will be high for rules matching many elements, and for rules matching a single element that is repeatedly modified in the chosen scenario).\n",
@@ -736,6 +780,17 @@
     "- you can zoom and pan to navigate larger traces,\n",
     "- in the `micro` mode use the traces selector to choose the repeat which recorded all relevant frames (in `macro` mode there is only one trace),\n",
     "- if the timeline fills the full height of the details section, you can resize it by grabbing bottom-right corner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f33895b-43e5-4b72-bd22-1b98750705d5",
+   "metadata": {},
+   "source": [
+    "Columns:\n",
+    "- `calls`: lower bound for the number of times given function was called (if the call was very fast and happened between samples it could not be recorded and hence would not be counted)\n",
+    "- `column`: location in the source file (resource): column\n",
+    "- `line`: location in the source file (resource): line"
    ]
   },
   {
