Fix docs typos, remove style comment

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -599,7 +599,7 @@
    "id": "07d7e1ea-124b-4238-80d0-5f6c5598b6f4",
    "metadata": {},
    "source": [
-    "In the above example exclusion of `.jp-JSONEditor*` or `.lm-Menu*` styles and appears to improve performance. Given, the scenario (opening menu) the former is just coincidence (was selected in the same block more often) and latter indicates relevant styles."
+    "In the above example exclusion of `.jp-JSONEditor*` or `.lm-Menu*` styles appears to improve performance. Given, the scenario (opening menu) the former is just coincidence (was selected in the same block more often) and latter indicates relevant styles."
    ]
   },
   {
@@ -685,7 +685,7 @@
     "- Benchmarking JavaScript code enables discovery of functions which\n",
     "  contribute to performance bottlenecks.\n",
     "- This feature relies on [JS self-profiling API](https://github.com/WICG/js-self-profiling)\n",
-    "  which as of 2022 is only available on Chromium-based browsers.\n",
+    "  which as of 2022 is only available in Chromium-based browsers.\n",
     "  - The self-profiling API relies on sampling method to collect stack\n",
     "    (list of frames) at specified *sampling intervals*."
    ]
