Allow to add scenarios programmatically

--- a/docs/source/user_guide.ipynb
+++ b/docs/source/user_guide.ipynb
@@ -819,6 +819,57 @@
     "\n",
     "If you use a replacement server (e.g. jupyverse) you will need to add the required header manually or switch to the default jupyter-server for the time of profiling."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73052b6b-24d6-4b91-812e-254a61f2ba90",
+   "metadata": {},
+   "source": [
+    "## Custom scenarios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de361f64-5913-453f-8603-8624c92bf571",
+   "metadata": {},
+   "source": [
+    "### Programmatic scenarios\n",
+    "\n",
+    "You can define custom scenarios programmatically by creating a JupyterLab extension which consumes `IUIProfiler` token:\n",
+    "\n",
+    "```typescript\n",
+    "import { JupyterFrontEnd, JupyterFrontEndPlugin } from '@jupyterlab/application';\n",
+    "import { IScenario, IUIProfiler } from '@jupyterlab/ui-profiler';\n",
+    "\n",
+    "\n",
+    "class MyScenario implements IScenario {\n",
+    "  id = 'myScenario';\n",
+    "  name = 'My scenario';\n",
+    "\n",
+    "  async run(): Promise<void> {\n",
+    "    console.log('Running!');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "export const plugin: JupyterFrontEndPlugin<void> = {\n",
+    "  id: '@my-organization/my-ui-profiler-extension:my-scenario',\n",
+    "  autoStart: true,\n",
+    "  requires: [IUIProfiler],\n",
+    "  activate: (app: JupyterFrontEnd, profiler: IUIProfiler) => {\n",
+    "    const myScenario = new MyScenario();\n",
+    "    profiler.addScenario(myScenario);\n",
+    "  }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f41ca671-fa3b-4aec-9985-7d2b1116d93c",
+   "metadata": {},
+   "source": [
+    "Please see [`tokens.ts` file](https://github.com/jupyterlab/ui-profiler/blob/main/src/tokens.ts) for the full documentation of `IScenario` interface."
+   ]
   }
  ],
  "metadata": {
